unpackaged/main/default/objects/Customer_Credit_Note__c/Customer_Credit_Note__c.object-meta.xml
<CustomObject>
    <label>Customer Credit Note</label>
    <nameField>
        <displayFormat>CCR-{000000}</displayFormat>
        <label>Customer Credit Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Credit Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>