unpackaged/main/default/objects/Customer_Credit_Note__c/fields/Account_Details__c.field-meta.xml
<CustomField>
    <fullName>Account_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field created to show  credit note on the Account related list.</description>
    <inlineHelpText>Please choose the clients details for this field</inlineHelpText>
    <label>Account Details</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Credit Notes</relationshipLabel>
    <relationshipName>Customer_Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>