unpackaged/main/default/objects/Customer_Credit_Note__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <formula>IF( ISBLANK(Customer_Invoice__r.Account__r.Exchequer_Ref__c) , Customer_Invoice__r.Account_Number__c, Customer_Invoice__r.Account__r.Exchequer_Ref__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>