unpackaged/main/default/objects/Customer_Credit_Note__c/fields/Billing_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Street__c</fullName>
    <formula>Customer_Invoice__r.Billing_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address Street</label>
    <type>Text</type>
</CustomField>