unpackaged/main/default/objects/Customer_Credit_Note__c/fields/Charge_Gross__c.field-meta.xml
<CustomField>
    <fullName>Charge_Gross__c</fullName>
    <formula>Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>