unpackaged/main/default/objects/Customer_Credit_Note__c/fields/Charge_Net__c.field-meta.xml
<CustomField>
    <fullName>Charge_Net__c</fullName>
    <formula>Charge_Gross__c * (5/6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>