unpackaged/main/default/objects/Customer_Credit_Note__c/fields/Charge_VAT__c.field-meta.xml
<CustomField>
    <fullName>Charge_VAT__c</fullName>
    <formula>Charge_Gross__c -  Charge_Net__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>