unpackaged/main/default/objects/Customer_Credit_Note__c/fields/Client_Industry__c.field-meta.xml
<CustomField>
    <fullName>Client_Industry__c</fullName>
    <description>Fetching Industry from Accounts</description>
    <formula>TEXT( Account_Details__r.Client_Industry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Industry</label>
    <type>Text</type>
</CustomField>