unpackaged/main/default/objects/Customer_Credit_Note__c/fields/Credit_Note_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Document_URL__c</fullName>
    <label>Credit Note Document URL</label>
    <type>Url</type>
</CustomField>