unpackaged/main/default/objects/Customer_Credit_Note__c/fields/Credit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Reason__c</fullName>
    <label>Credit Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Empty</fullName>
            </value>
            <value>
                <fullName>Booking Error</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Duplicate Payment</fullName>
            </value>
            <value>
                <fullName>Discount Not Applied</fullName>
            </value>
            <value>
                <fullName>Engineer Not Communicating With Client</fullName>
            </value>
            <value>
                <fullName>FOC</fullName>
            </value>
            <value>
                <fullName>Incorrect Hours Charged</fullName>
            </value>
            <value>
                <fullName>Incorrect Rate Applied</fullName>
            </value>
            <value>
                <fullName>Quote Fee Only</fullName>
            </value>
            <value>
                <fullName>Report Not Sent</fullName>
            </value>
            <value>
                <fullName>Report Not Sufficient</fullName>
            </value>
            <value>
                <fullName>Workmanship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>