unpackaged/main/default/objects/Customer_Credit_Note__c/fields/Customer_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Record_Type__c</fullName>
    <formula>Customer_Invoice__r.Account__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Record Type</label>
    <type>Text</type>
</CustomField>