unpackaged/main/default/objects/Customer_Credit_Note__c/fields/Exchequer_Export__c.field-meta.xml
<CustomField>
    <fullName>Exchequer_Export__c</fullName>
    <label>Exchequer Export</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
                <default>true</default>
                <label>Not Sent</label>
            </value>
            <value>
                <fullName>Ready to Send</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>