unpackaged/main/default/objects/Customer_Credit_Note__c/fields/Gl_Code_Number__c.field-meta.xml
<CustomField>
    <fullName>Gl_Code_Number__c</fullName>
    <formula>Customer_Invoice__r.Exchequer_General_Ledger_Code_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gl Code Number</label>
    <type>Text</type>
</CustomField>