unpackaged/main/default/objects/Customer_Credit_Note__c/fields/Reason_for_Credit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Credit__c</fullName>
    <label>Reason for Credit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>