unpackaged/main/default/objects/Customer_Credit_Note__c/fields/Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact__c</fullName>
    <formula>Customer_Invoice__r.Site_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Contact</label>
    <type>Text</type>
</CustomField>