unpackaged/main/default/objects/Customer_Credit_Note__c/listViews/All_Customer_Credit_Notes.listView-meta.xml
<ListView>
    <fullName>All_Customer_Credit_Notes</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Account_Type__c</columns>
    <columns>Account_Details__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Customer Credit Notes</label>
</ListView>