unpackaged/main/default/objects/Customer_Credit_Note__c/listViews/All_Customer_Credit_Notes_September.listView-meta.xml
<ListView>
    <fullName>All_Customer_Credit_Notes_September</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>9/1/2022 12:00 AM</value>
    </filters>
    <label>All Customer Credit Notes September</label>
</ListView>